--- a/UI/public/title-bar.css
+++ b/UI/public/title-bar.css
@@ -11,11 +11,12 @@
 
 .glue-header-logo {
   margin-right: 20px;
-  font-size: 24px;
+  font-size: 2.5vw;
   font-weight: bold;
 }
 
 .glue-list {
+  font-size: 1.5vw;
   list-style: none;
   margin: 0;
   padding: 0;
